tests/machine/x/php/str_builtin.error
PHP Fatal error:  Uncaught Error: Call to undefined function str() in /workspace/mochi/tests/machine/x/php/str_builtin.php:2
Stack trace:
#0 {main}
  thrown in /workspace/mochi/tests/machine/x/php/str_builtin.php on line 2
