tests/machine/x/php/str_builtin.php
<?php
var_dump(strval(123));
?>
